# crop-gemini

./: .gitignore  .tauri-signing-key  .tauri-signing-key.pub  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.tauri/keys/: new.key  new.key.pub  private.key  private.key.pub
src/: index.html  main.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
website/: index.html  styles.css
