[package]
name = "crop-gpt"
version = "2.0.4"
description = "Quick Screenshot to Gemini"
authors = ["you"]
edition = "2021"

[lib]
name = "crop_gpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri - minimal features
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

# Serialization - minimal
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"

# Screen capture
xcap = "0.0.14"

# Image processing - PNG only (screenshots are RGBA)
image = { version = "0.25", default-features = false, features = ["png"] }

# Clipboard with image support
arboard = { version = "3", default-features = false, features = ["image-data"] }

# Keyboard simulation for auto-paste
enigo = "0.3"
tauri-plugin-store = "2"
tauri-plugin-process = "2"

# Windows API for window detection
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

# Optimized release build
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # No stack unwinding
strip = true          # Strip debug symbols
